styles.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Kumbh Sans', sans-serif;
    color: #131313;
}

body { 
  padding-top: 80px; 
}

html {
  scroll-behavior: smooth
}

.white {
  background: #ffffff;
  height: fit-content;
}

.grey {
  background:#ededed;
  height: fit-content;
}

.anchors {
  display: block;
  position: relative;
  top: -80px;
  visibility: hidden;
}

.container {
  padding: 25px 0px;
}

.navbar {
  height: 80px;
}

.nav-link {
  background-color: #ff8177;
  background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  display: flex;
  align-items: center;
  cursor: pointer;
  text-decoration: none;
  font-size: 2rem;
}

.navbar-nav > li{
  padding: 5px;
}

.fa-fire {
  margin-right: 0.5rem;
}

.form {
  text-decoration: none;
  color: #fff;
  padding: 10px 20px;
  border: none;
  outline: none;
  border-radius: 4px;
  background: #f77062;
  font-size: 1rem;
  margin: 10px 0px;
  position: relative;
}

.button:hover {
  cursor: pointer;
  background: #4837ff;
  transition: all 0.3s ease;
}

.nav-link:hover {
  background-image: linear-gradient(to top, #b721ff 0%, #21d4fd 100%);
  transition: all 0.3s ease;
  border-radius: 5px;
}

/* Main Content CSS */
.main {
  display: flex;
  height: 90vh;
  width: 100%;
  z-index: 1;
  text-align: center;
  align-items: center;
  background-image: url(images/large1.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  animation: animate 30s ease-in-out infinite;
}

.main__content {
  color: #fff;
  width: 100%;
} 

.main__content h1 {
  filter: drop-shadow(2px 2px #000000) 
  drop-shadow(-2px -2px #000000)
  drop-shadow(-2px 2px #000000)
  drop-shadow(2px -2px #000000);
  font-size: 100px; 
  background-color: #ff8177; 
  background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  position: relative;
  text-transform: uppercase;
}

@keyframes animate {
  0% , 14% {
      background-image: url(images/large1.jpg);
  }
  17%, 31%
  {
      background-image: url(images/small1.jpg);
  }
  34%, 47%
  {
      background-image: url(images/small3.jpg);
  }
  50%, 64%
  {
      background-image: url(images/small2.jpg);
  }
  67%, 81%
  {
      background-image: url(images/large3.jpg);
  }
  84%, 97%
  {
      background-image: url(images/large2.jpg);
  }
}

.row {
  align-items: center;
}

.col {
  text-align: center;
  font-size: 20px;
}

.col h1 {
  font-size: 30px;
  text-transform: uppercase;
}

#included p {
  display: inline-block; 
  text-align: left
}

.prices {
  padding: 40px 25px;
}

#photo {
  padding-bottom: 0px;
}

.img {
  height: 100%;
  width: 100%;
}

/* Footer CSS */
.footer {
  height: 80px;
  background-color: #141414;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.footer p {
  color: #fff
}

#main-slider .splide__slide{
  height: 500px;
}

.splide__slide img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.splide__slide {
  opacity: 0.6;
}

.splide__slide.is-active {
  opacity: 1;
}

